--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/jeffdatabase
+# spring.datasource.url=jdbc:postgresql://localhost:5432/jeffdatabase
 spring.datasource.username=kayzej
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
